tested data dir externalisation